[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Level0/Level0.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FiraSansBlack45.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/RobotoRegular28.tres" type="DynamicFont" id=3]
[ext_resource path="res://Levels/Game/Sprites/start_mission_button.png" type="Texture" id=4]
[ext_resource path="res://Levels/Game/Sprites/level_select_window.png" type="Texture" id=5]
[ext_resource path="res://Fonts/FiraSansBlack32.tres" type="DynamicFont" id=6]
[ext_resource path="res://Levels/Game/Sprites/easy.png" type="Texture" id=7]
[ext_resource path="res://Levels/Level1/Sprites/x.png" type="Texture" id=8]

[node name="Level0" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelSelectWindow" type="Sprite" parent="."]
position = Vector2( 460, 489 )
texture = ExtResource( 5 )

[node name="TitleText" type="Label" parent="."]
margin_left = 71.0
margin_top = 76.0
margin_right = 853.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 2 )
text = "MISSIONS"
align = 1
valign = 1

[node name="LevelButtons" type="Node2D" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 277.0
margin_top = 200.0
margin_right = 662.0
margin_bottom = 870.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="Details" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 29 )

[node name="Difficulty" type="Sprite" parent="Details"]
position = Vector2( 460, 212 )
texture = ExtResource( 7 )

[node name="DescriptionText" type="Label" parent="Details"]
margin_left = 104.0
margin_top = 269.0
margin_right = 816.0
margin_bottom = 733.0
custom_fonts/font = ExtResource( 3 )
text = "Description"
align = 1

[node name="StartButton" type="Button" parent="Details"]
margin_left = 311.0
margin_top = 763.0
margin_right = 624.0
margin_bottom = 827.0
icon = ExtResource( 4 )
flat = true
icon_align = 1

[node name="Label" type="Label" parent="Details/StartButton"]
margin_left = 12.0
margin_top = 8.0
margin_right = 301.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 6 )
text = "Start mission"
align = 1
valign = 1

[node name="CloseButton" type="Button" parent="Details"]
margin_left = 789.0
margin_top = 62.0
margin_right = 845.0
margin_bottom = 109.0
icon = ExtResource( 8 )
flat = true
expand_icon = true

[connection signal="pressed" from="Details/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Details/CloseButton" to="." method="_on_CloseButton_pressed"]
